# enb-emulator

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.override.yml.example  docker-compose.yml  justfile
login-server/Net7SSL/: AccountManager.cpp  AccountManager.h  CMakeLists.txt  ClientToGlobalServer.cpp  Connection.cpp  ConnectionManager.cpp  ConnectionManager.h  LinuxAuth.cpp  MailslotManager.cpp  MailslotManager.h  MemoryHandler.h  Mutex.cpp  Net7SSL.cpp  Net7SSL.h  Net7SSL.sln  Net7SSL.vcproj  Net7SSL_opcodes.h  PacketStructures.h  SSL_Connection.cpp  SSL_Connection.h  SSL_Listener.cpp  SSL_Listener.h  SSL_ServerManager.cpp  ServerManager.h  TcpListener_B.cpp  TcpListener_B.h  UDPClient.cpp  UDPClient.h  WestwoodRC4.cpp  WestwoodRSA.cpp  connection_B.h
login-server/Net7SSL/compat/: threading_shim.cpp
proxy/: CMakeLists.txt  ClientToGlobalServer.cpp  ClientToMasterServer.cpp  ClientToSectorServer.cpp  ClientToServer_linux_stubs.cpp  Connection.cpp  Connection.h  ConnectionManager.cpp  ConnectionManager.h  Dockerfile  MessageQueue.cpp  MessageQueue.h  Mutex.cpp  Mutex.h  Net7.cpp  Net7.h  Net7Proxy.dsp  Net7Proxy.vcproj  Opcodes.h  PacketMethods.h  PacketStructures.h  SSL_Connection.cpp  SSL_Connection.h  SSL_Listener.cpp  SSL_Listener.h  SectorManager.h  SectorServerManager.cpp  SectorServerManager.h  ServerManager.cpp  ServerManager.h  TcpListener.cpp  TcpListener.h  UDPClient.cpp  UDPClient.h  UDPClient_linux.cpp  UDPProxyMVAS.cpp  UDPProxyToClient.cpp  UDPProxyToClient_linux.cpp  UDPProxyToGlobal.cpp  WestwoodRC4.cpp  (+3 more)
proxy/cmake/: mingw-w64-x86_64.toolchain.cmake
proxy/compat/: threading_shim.h  win32_shim.h
proxy/scripts/: build-openssl-mingw.sh
server/: BUILD_ERRORS.md  CMakeLists.txt  Dockerfile  WARNINGS_BASELINE.md
server/compat/: README.md  WIN32_INVENTORY.md  mailslot_shim.cpp  mailslot_shim.h  posix_ipc.cpp  posix_ipc.h  windows.h
server/crypto/: MIGRATION_TABLE.md  OPENSSL_INVENTORY.md
server/data/: Database (03-08).sql  ItemBase.xml  JobDetails.csv  JobRewards.csv  JobRoutes.csv  JobSponsors.csv  Missions.xml  SQL Info.txt  SectorContent-golden.xml  SectorContent.xml  Skills.xml  accounts.txt  forbidden.txt  sector_1015.txt  sector_10151.txt  sector_1020.txt  sector_10201.txt  sector_1030.txt  sector_10301.txt  sector_1036.txt  sector_10361.txt  sector_1052.txt  sector_10521.txt  sector_1055.txt  sector_10551.txt  sector_1060.txt  sector_10601.txt  sector_1065.txt  sector_10651.txt  sector_1070.txt  sector_10701.txt  sector_1071.txt  sector_10711.txt  sector_1075.txt  sector_1076.txt  sector_10761.txt  sector_1077.txt  sector_1079.txt  sector_10791.txt  sector_1115.txt  (+83 more)
server/db/: MIGRATION_PATTERN.md  MYSQL_CALLSITES.md
server/src/: Abilities.h  AccountManager.cpp  AccountManager.h  AssetDatabase.h  AssetDatabaseSQL.cpp  BuffDatabaseSQL.cpp  BuffDatabaseSQL.h  CBAssetParser.cpp  CBAssetParser.h  CMobBuffs.cpp  CMobBuffs.h  CMobClass.cpp  CMobClass.h  CMobEquippable.cpp  CMobEquippable.h  CSVParser_DEP_.cpp  CSVParser_DEP_.h  ClientToGlobalServer.cpp  ClientToMasterServer.cpp  ClientToSectorServer.cpp  CommonPlayerAndMob.cpp  CommonPlayerAndMob.h  Connection.cpp  Connection.h  ConnectionManager.cpp  ConnectionManager.h  EffectManager.cpp  EffectManager.h  Equipable.cpp  Equipable.h  FactionDataSQL.cpp  FactionDataSQL.h  FieldClass.cpp  FieldClass.h  GroupManager.cpp  GuildManager.cpp  Guilds.h  HulkClass.cpp  HulkClass.h  HuskClass.cpp  (+132 more)
server/src/Abilities/: ATemplate.cpp  ATemplate.h  AbilityAfterburn.cpp  AbilityAfterburn.h  AbilityBase.cpp  AbilityBase.h  AbilityBefriend.cpp  AbilityBefriend.h  AbilityBioRepression.cpp  AbilityBioRepression.h  AbilityCloak.cpp  AbilityCloak.h  AbilityCombatTrance.cpp  AbilityCombatTrance.h  AbilityEnergyLeech.cpp  AbilityEnergyLeech.h  AbilityEnrage.cpp  AbilityEnrage.h  AbilityEnvironmentShield.cpp  AbilityEnvironmentShield.h  AbilityFoldSpace.cpp  AbilityFoldSpace.h  AbilityGravityLink.cpp  AbilityGravityLink.h  AbilityHacking.cpp  AbilityHacking.h  AbilityHullPatch.cpp  AbilityHullPatch.h  AbilityJumpStart.cpp  AbilityJumpStart.h  AbilityMenace.cpp  AbilityMenace.h  AbilityPowerDown.cpp  AbilityPowerDown.h  AbilityPsionicShield.cpp  AbilityPsionicShield.h  AbilityRally.cpp  AbilityRally.h  AbilityReactorOpt.cpp  AbilityReactorOpt.h  (+20 more)
server/src/AuxClasses/: AuxAttachment.cpp  AuxAttachment.h  AuxAttachments.cpp  AuxAttachments.h  AuxBase.cpp  AuxBase.h  AuxBuff.cpp  AuxBuff.h  AuxBuffs.cpp  AuxBuffs.h  AuxCategories.cpp  AuxCategories.h  AuxCategory.cpp  AuxCategory.h  AuxDamage.cpp  AuxDamage.h  AuxEffect.cpp  AuxEffect.h  AuxElement.cpp  AuxElement.h  AuxElements.cpp  AuxElements.h  AuxEquipInventory.cpp  AuxEquipInventory.h  AuxEquipItem.cpp  AuxEquipItem.h  AuxFaction.cpp  AuxFaction.h  AuxFactions.cpp  AuxFactions.h  AuxGroupInfo.cpp  AuxGroupInfo.h  AuxGroupMember.cpp  AuxGroupMember.h  AuxGroupMembers.cpp  AuxGroupMembers.h  AuxHarvestable.cpp  AuxHarvestable.h  AuxHulkIndex.cpp  AuxHulkIndex.h  (+76 more)
server/src/mysql/: mysqlplus.cpp  mysqlplus.h
server/src/openssl/: opensslconf.h
server/src/xmlParser/: AFPL-license.txt  Read Me.html  xmlParser.h  xmlParser_.cpp
tests/: CMakeLists.txt  README.md  smoke_test.cpp
tests/client/: capture_parser.cpp  capture_parser.h  handshake_driver.cpp  handshake_driver.h  handshake_live_test.cpp  master_join_test.cpp  replay.cpp  replay_test.cpp  sector_login_test.cpp  tcp_client.cpp  tcp_client.h
tests/client/captures/: capture_1_post_handshake.txt
tests/db/: mysqlplus_wrapper_test.cpp
tests/integration/CliClient.IntegrationTests/: CliClient.IntegrationTests.csproj  ClientFixture.cs  Directory.Build.props  README.md  RepoRoot.cs  ServerCollection.cs  ServerFixture.cs  TestAccounts.cs
tests/protocol/: header_layout_test.cpp
tests/server/: CMakeLists.txt  README.md
tests/server/client/: handshake_driver.cpp  handshake_driver.h  handshake_live_test.cpp  handshake_test.cpp  master_join_test.cpp  replay.h  version_request_test.cpp
tests/server/db/: mysqlplus_wrapper_test.cpp  postgres_smoke_test.cpp  wrapper_test_stubs.cpp
(+804 files in other folders)
